# PSC_PROJECT

./: .gitignore  CMakeLists.txt  Main.cpp  Mat_ops.cpp  Mat_ops.h  acc_fft.cpp  acc_fft.h  my_fft.cpp  my_fft.h  my_filters.cpp  my_filters.h  omp_fft.cpp  omp_fft.h
